--- a/AutoAppo_StevenVR.iOS/AutoAppo_StevenVR.iOS.csproj
+++ b/AutoAppo_StevenVR.iOS/AutoAppo_StevenVR.iOS.csproj
@@ -132,6 +132,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>6.5.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
   </ItemGroup>
